# abulmisk

./: .gitignore  CHANGELOG.md  Makefile  README.md  abulmisk.service  ppmgr.sh  pyproject.toml  run_debug.py  tox.ini  wsgi.py
abulmisk/: __init__.py  actor_inner_join.py  configurations.py
abulmisk/forms/: __init__.py  actor_innerjoin.py  posts.py  user.py
abulmisk/model/: base.py  user.py
abulmisk/routes/: __init__.py  admin.py  appgen.py  koned.py  main.py  projects.py  user.py
abulmisk/static/css/: main.css
abulmisk/templates/: base.html  contact.html  index.html  koned.html  loading.html  render_datatable.html
abulmisk/templates/auth/: login.html  register.html
abulmisk/templates/projects/: actor_ij_entry.html  projects.html
