[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "abulmisk"
version = '0.1.0'
description = "A Flask webapp for hosting services"
authors = ["bobrock <bobrock@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/barretobrock/abulmisk'
packages = [
    { include = 'abulmisk' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
pukr = { git = "https://github.com/barretobrock/pukr.git", branch = "main" }
gunicorn = "~21"
cinemagoer = "~2023"
Flask = "~2.3"
Flask-Admin = "~1"
Flask-Bcrypt = "~1"
Flask-Login = "~0"
Flask-Security = "~3"
Flask-SQLAlchemy = "~3"
itsdangerous = "~2"
jwt = "~1"
pandas = "~2"
requests = "~2"
sqlalchemy = "~2"
Werkzeug = "~2"
WTForms = "~3"
# Optional dependencies would go down here
# example = { version = ">=1.7.0", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "~3"
pytest = "~7"
pytest-cov = "~4"
flake8 = "~6"
tox = "~4"

[tool.isort]
profile = 'black'
force_grid_wrap = 2
force_sort_within_sections = true
skip_gitignore = true
skip_glob = ['*_pb2.py', '*_pb2_grpc.py']

[tool.poetry.extras]
test = ["pytest"]
